--- a/MediTrack/index.html
+++ b/MediTrack/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homepage</title>
-    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="MediTrack/assets/style.css">
     <style>
         body{
-            background-image:url('/assets/health-bg.jpg');
+            background-image:url('MediTrack/assets/health-bg.jpg');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -40,4 +40,5 @@
     </div>
     
 </body>
+
 </html>
