--- a/MediTrack/add-record.html
+++ b/MediTrack/add-record.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Patient Record</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="MediTrack/style.css">
     <style>
     body{
             display: flex;
@@ -12,7 +12,7 @@
             align-items: center;
             min-height: 100vh;
             margin: 0;
-            background-image:url('assets/health-bg.jpg');
+            background-image:url('MediTrack/assets/health-bg.jpg');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -222,4 +222,5 @@
 </body>
 
 </body>
+
 </html>
